// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`competing style priority 1`] = `
  () => (
    <Foo>
      <Bar className={cx("Bar_6dv", "Bar_6b5")} />
    </Foo>
  );
  
  css(\`
  	.Bar_6b5 {
  		color: blue;
  	}
  	.Bar_6dv {
  		color: orange;
  	}
  \`);
`;

exports[`element 1`] = `
  () => <div className="element_5ae">Hello World</div>;
  css(\`
  	.element_5ae {
  		color: red;
  	}
  \`);
`;

exports[`hoisted 1`] = `
  const App = () => (
    <div className="App_8dv">Hello World</div>
  );
  
  css(\`
  	.App_8dv {
  		color: red;
  	}
  \`);
`;

exports[`nested element 1`] = `
  () => (
    <div>
      <div />
      <div className="bar_l7l">
        <div className="baz_5fk" />
      </div>
    </div>
  );
  
  css(\`
  	.bar_l7l {
  		color: red;
  	}
  	.baz_5fk {
  		color: blue;
  	}
  \`);
`;

exports[`with existing className prop 1`] = `
  () => (
    <div className={cx("foo", "element_5ae")}>
      Hello World
    </div>
  );
  
  css(\`
  	.element_5ae {
  		color: red;
  	}
  \`);
`;
